[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "JordanChiquetModules"
version = "0.0.3"
authors = [
  { name="Jordan Chiquet", email="jordanchiquet@gmail.com" },
]
description = "Renard modules"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
